--- a/app/src/main/res/layout/fragment_activity_history.xml
+++ b/app/src/main/res/layout/fragment_activity_history.xml
@@ -12,11 +12,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:allowUndo="false"
-        android:background="@drawable/login_rounded_button"
+        android:background="@color/fireOrange"
         android:ems="10"
         android:gravity="center"
         android:text="Activities"
-        android:textColor="@color/colorWhite"
+        android:textColor="@color/darkNavyBlue"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
