--- a/app/src/main/res/layout/activity_goalbtn_popup.xml
+++ b/app/src/main/res/layout/activity_goalbtn_popup.xml
@@ -5,7 +5,7 @@
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/extremelyLightGrey">
+    android:background="@color/darkNavyBlue">
 
     <TextView
         android:id="@+id/goal_caloriesLeft"
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:allowUndo="false"
         android:text="Calories left: "
+        android:textColor="@color/fireOrange"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,6 +28,7 @@
         android:layout_height="wrap_content"
         android:allowUndo="false"
         android:text="Steps left: "
+        android:textColor="@color/fireOrange"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -74,6 +76,7 @@
         android:layout_marginTop="68dp"
         android:allowUndo="false"
         android:text="Target Calories to burn: "
+        android:textColor="@color/fireOrange"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -89,6 +92,7 @@
         android:layout_marginTop="56dp"
         android:allowUndo="false"
         android:text="Target Steps to complete: "
+        android:textColor="@color/fireOrange"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
