--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginBottom="56dp"
+    android:background="@color/extremelyLightGrey"
     tools:context=".fragments.HomeFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -15,9 +15,9 @@
         android:layout_width="88dp"
         android:layout_height="39dp"
         android:layout_marginTop="32dp"
-        android:background="@drawable/login_rounded_button"
+        android:background="@color/darkNavyBlue"
         android:text="Goals"
-        android:textColor="@color/colorWhite"
+        android:textColor="@color/fireOrange"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,14 +25,14 @@
 
     <Button
         android:id="@+id/logoutBtn"
-        android:layout_width="92dp"
-        android:layout_height="43dp"
-        android:layout_marginTop="32dp"
+        android:layout_width="80dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="28dp"
         android:background="@drawable/rounded_button"
         android:text="Log-out"
         android:textColor="@color/colorWhite"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.921"
+        app:layout_constraintHorizontal_bias="0.951"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -51,10 +51,10 @@
             style="?android:progressBarStyleHorizontal"
             android:layout_width="230dp"
             android:layout_height="230dp"
-            android:visibility="invisible"
             android:progress="0"
-            android:rotation="-90"
             android:progressDrawable="@drawable/circle"
+            android:rotation="-90"
+            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -67,6 +67,7 @@
             android:layout_height="185dp"
             android:background="@drawable/activity_button"
             android:text="START"
+            android:textColor="@color/fireOrange"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -78,7 +79,8 @@
         android:id="@+id/setFoodItem"
         android:layout_width="45dp"
         android:layout_height="42dp"
-        android:text="FI"
+        android:background="@drawable/outline_last_page_black_24dp"
+        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.946"
@@ -91,7 +93,8 @@
         android:layout_width="50dp"
         android:layout_height="43dp"
         android:layout_marginStart="16dp"
-        android:text="FA"
+        android:background="@drawable/outline_first_page_black_24dp"
+        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -101,7 +104,7 @@
         android:layout_width="130dp"
         android:layout_height="28dp"
         android:layout_marginTop="31dp"
-        android:background="@drawable/login_field_rounded_button"
+        android:background="@color/fireOrange"
         android:gravity="center_horizontal"
         app:layout_constraintBottom_toTopOf="@+id/tableLayout"
         app:layout_constraintEnd_toEndOf="parent"
@@ -131,21 +134,24 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="HH"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:textColor="@color/fireOrange" />
 
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="MM"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:textColor="@color/fireOrange" />
 
             <TextView
                 android:id="@+id/textView4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="SS"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:textColor="@color/fireOrange" />
 
         </TableRow>
 
