AddFoodFragment now adds consumables to profile, database updates aswell, foodhistory fragment onCreate, retrieves the consumables and adds to recyclerview, images are all the same though

--- a/app/src/main/res/layout/fragment_add_food_item.xml
+++ b/app/src/main/res/layout/fragment_add_food_item.xml
@@ -10,11 +10,11 @@
         android:id="@+id/foodSpinneroo"
         android:layout_width="200dp"
         android:layout_height="50dp"
-        android:background="@drawable/login_rounded_button"
         android:gravity="center_horizontal"
         android:hint="Search Food"
+        android:background="@drawable/login_rounded_button"
         android:spinnerMode="dialog"
-        android:textColor="#FFFFFF"
+        android:textColor="#080808"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -26,8 +26,13 @@
         android:id="@+id/FoodTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="Food/drink"
-        android:textSize="20sp"
+        android:allowUndo="false"
+        android:background="@drawable/login_rounded_button"
+        android:ems="10"
+        android:gravity="center"
+        android:text="Add a Food or Drink"
+        android:textColor="@color/colorWhite"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
