--- a/app/src/main/res/layout/layout_food.xml
+++ b/app/src/main/res/layout/layout_food.xml
@@ -21,7 +21,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="food Amount"
-        android:textColor="#000"
+        android:textColor="@color/fireOrange"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.534"
         app:layout_constraintStart_toEndOf="@+id/food_Image"
@@ -33,7 +34,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
         android:text="xx-xx-xx"
-        android:textColor="#000"
+        android:textColor="@color/fireOrange"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.538"
