--- a/app/src/main/res/layout/fragment_activity_history.xml
+++ b/app/src/main/res/layout/fragment_activity_history.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/extremelyLightGrey"
+    android:background="@color/colorWhite"
     tools:context=".fragments.ActivityHistoryFragment">
 
     <TextView
@@ -12,17 +12,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:allowUndo="false"
-        android:background="@color/fireOrange"
+        android:background="@color/colorWhite"
         android:ems="10"
         android:gravity="center"
         android:text="Activities"
-        android:textColor="@color/darkNavyBlue"
+        android:textColor="@color/headingGrey"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.248" />
+        app:layout_constraintVertical_bias="0.071" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
