--- a/app/src/main/res/layout/fragment_add_future_activity.xml
+++ b/app/src/main/res/layout/fragment_add_future_activity.xml
@@ -11,11 +11,11 @@
         android:id="@+id/activitySpinner2"
         android:layout_width="200dp"
         android:layout_height="50dp"
-        android:background="@drawable/login_rounded_button"
+        android:background="@drawable/orange_gradient_outline_button"
         android:gravity="center_horizontal"
         android:hint="Select Activity"
         android:spinnerMode="dialog"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/fireOrange"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -27,10 +27,10 @@
         android:id="@+id/dateOfBirthET"
         android:layout_width="200dp"
         android:layout_height="50dp"
-        android:background="@drawable/login_rounded_button"
+        android:background="@drawable/orange_gradient_outline_button"
         android:onClick="showNumberPicker"
         android:text="Select Date"
-        android:textColor="#FFFF"
+        android:textColor="@color/fireOrange"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -42,9 +42,9 @@
         android:id="@+id/selectTimeBtn"
         android:layout_width="200dp"
         android:layout_height="50dp"
-        android:background="@drawable/login_rounded_button"
+        android:background="@drawable/orange_gradient_outline_button"
         android:text="Select Time"
-        android:textColor="#FFFF"
+        android:textColor="@color/fireOrange"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -57,9 +57,9 @@
         android:id="@+id/durationBtn"
         android:layout_width="200dp"
         android:layout_height="50dp"
-        android:background="@drawable/login_rounded_button"
+        android:background="@drawable/orange_gradient_outline_button"
         android:text="Set a Duration"
-        android:textColor="#FFFF"
+        android:textColor="@color/fireOrange"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -84,10 +84,13 @@
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="165dp"
+        android:layout_height="23dp"
+        android:background="@color/colorWhite"
+        android:gravity="center"
         android:text="Add Future Activity"
         android:textAllCaps="true"
+        android:textColor="@color/headingGrey"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
