--- a/app/src/main/res/layout/layout_listitem.xml
+++ b/app/src/main/res/layout/layout_listitem.xml
@@ -3,7 +3,7 @@
     android:id="@+id/parent_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/extremelyLightGrey"
+    android:background="@color/colorWhite"
     android:padding="15dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
