--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -7,6 +7,6 @@
     android:paddingTop="5dp"
     android:paddingBottom="5dp"
     android:textAllCaps="true"
-    android:textColor="#FFFF"
+    android:textColor="@color/fireOrange"
     android:textSize="14sp"
     android:textStyle="bold" />
